Fixing the block screen page to overlap all elements and cover the entire page

--- a/block.css
+++ b/block.css
@@ -1,12 +1,16 @@
-body {
+body{
 }
 
+
 #block {
-  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5); /* black, slightly transparent */
+  position: fixed;
   left: 0;
   top: 0;
+  bottom: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 9999999; /* overlaps other elements */
+  
   font-size: 20px;
   color: white;
   text-align: center;
